force-app/main/default/objects/Checklist_Item__c/fields/Checked__c.field-meta.xml
<CustomField>
    <fullName>Checked__c</fullName>
    <label>Checked</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>