force-app/main/default/objects/Checklist_Item__c/fields/Checklist_Template_Item__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Template_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Checklist Template Item</label>
    <referenceTo>Checklist_Template_Item__c</referenceTo>
    <relationshipLabel>Checklist Items</relationshipLabel>
    <relationshipName>Checklist_Items</relationshipName>
    <type>Lookup</type>
</CustomField>