force-app/main/default/objects/Checklist_Item__c/fields/CompletedBy__c.field-meta.xml
<CustomField>
    <fullName>CompletedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Completed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Checklist_Items</relationshipName>
    <type>Lookup</type>
</CustomField>